# agent-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
.agents/: README.md  settings.json
.agents/agents/: architect.md  debugger.md  executor.md  langgraph-tutor.md  perf-optimizer.md  qa.md  reviewer.md  security-auditor.md
.agents/commands/: agent-create.md  dwp-create.md  dwp-execute.md  dwp-refine.md  dwp-resume.md  dwp-status.md  dwp-verify.md  skill-create.md
.agents/docs/: COMMANDS_REFERENCE.md  skills_agents_catalog.md
.devcontainer_example/: devcontainer.json
.github/workflows/: ci.yml
.vscode_example/: settings.json
docker/: custom_commands.sh
docker/local/: docker-compose.yaml
docs/: AI_AGENT_COLLAB.md  AI_AGENT_ONBOARDING.md  ARCHITECTURE.md  DEVELOPMENT_COMMANDS.md  DIAGRAM_STANDARD.md  MODULE_TEMPLATE.md  PERFORMANCE.md  PRODUCT_SPEC.md  README.md  SECURITY.md  STANDARDS.md  TESTING_GUIDE.md  agent-architecture.md  agent-security.md  glossary.md  langchain.md  langgraph.md  memory.md  multi-agent.md  neo4j.md  observability.md  openai.md  overview.md  qdrant.md  rag.md  roadmap.md  testing.md  tools.md
docs/adr/: 0001-offline-first-fakes.md  0002-shared-library-boundary.md  0003-module-numbering-and-tracks.md  README.md
src/: README.md
src/01_state_basics/: README.md  hello_world.py  main.py
src/02_langgraph_basics/: README.md  basic_graph.py  main.py
src/03_llm_nodes/: README.md  llm_node.py  main.py
src/04_routing_and_branches/: README.md  main.py  router.py
src/05_tools/: README.md  main.py  mock_tool.py
src/06_memory_basics/: README.md  main.py  memory.py
src/07_qdrant_integration/: README.md  main.py  mock_qdrant.py
src/08_graph_memory_neo4j/: README.md  main.py  mock_graph.py
src/09_multi_agent_systems/: README.md  agents.py  main.py
src/10_full_brain_simulation/: README.md  brain.py  main.py
src/11_graph_branching/: README.md  branching.py  main.py
src/12_parallel_execution/: README.md  main.py  parallel.py
src/13_async_nodes/: README.md  async_nodes.py  main.py
src/14_error_handling/: README.md  error_handling.py  main.py
src/15_chat_models/: README.md  chat_turn.py  main.py
src/16_structured_outputs/: README.md  main.py  structured_output.py
tests/: conftest.py  test_smoke.py  test_track1_foundations.py  test_track2_llm.py  test_track3_agents.py  test_track4_memory.py  test_track5_retrieval.py  test_track6_graph.py  test_track7_multiagent.py  test_track8_production.py  test_track9_projects.py
(+161 files in other folders)
